# constant/url.go
@@ -5,5 +5,6 @@ const InternalUrl = "/internal"
 const Ver1Url = "/v1"
 
 const UsersUrl = "/users"
+const UsersFileUrl = "/users/:file"
 const UserUrl = "/user"
 const UserIdUrl = "/user/:id"
