# docs/swagger.json
@@ -120,6 +120,28 @@
                 ],
                 "responses": {}
             }
+        },
+        "/v1/users/{file}": {
+            "get": {
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "用戶"
+                ],
+                "summary": "下載",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "csv",
+                        "description": "檔案類型",
+                        "name": "file",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
